--- a/css/accomodation.css
+++ b/css/accomodation.css
@@ -16,18 +16,18 @@
 }
 
 .btn-search {
-  background-color: #f7ac57; /* Orange color */
-  border-color: #d97706;
+  background-color: #070605;
+  border-color: #060505;
 }
 
 .btn-search:hover {
-  background-color: #ff9f1c; /* A lighter shade of orange for hover effect */
+  background-color: #ff9f1c; 
   border-color: #ff9f1c;
 }
 
 
-/* Accommodation Cards */
-.accommodation-card {
+
+ .accommodation-card {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   border-radius: 12px;
   overflow: hidden;
@@ -35,9 +35,11 @@
 
 .accommodation-card img {
   width: 100%;
-  height: auto;
+  height: 200px; /* You can adjust this */
   object-fit: cover;
+  border-bottom: 2px solid #ffa500;
 }
+
 
 .accommodation-card:hover {
   transform: scale(1.02);
@@ -64,13 +66,13 @@
   }
 }
 .navbar {
-  background-color: #FFA500; /* Orange color */
+  background-color: #FFA500; 
 }
 .navbar .navbar-brand,
 .navbar .nav-link {
-  color: white; /* White text for better contrast */
+  color: white; 
 }
 
 .navbar .nav-link:hover {
-  color: #333; /* Darker color on hover */
-}
+  color: #333; 
+}  
